2003-01-31  C. Brian Jones <cbj@gnu.org>

	* gnu/testlet/java/net/Socket/SocketTest.java (test_params): 
	remove check defaults for getPort(), getLocalPort()
	* gnu/testlet/java/net/Socket/jdk12.java: prepare for new tests 
	(added checkpoints)
	* gnu/testlet/java/net/Socket/jdk13.java: prepare for new tests 
	(added checkpoints)
	* gnu/testlet/java/net/Socket/jdk14.java: new test has default 
	checks for getPort(), getLocalPort(); prepare for new tests 
	(added checkpoints)

2003-01-30  C. Brian Jones <cbj@gnu.org>

	* gnu/testlet/java/net/Socket/SocketTest.java (test_params): 
	check defaults for getPort(), getLocalPort(), getTcpNoDelay(), 
	getSoLinger()
	* gnu/testlet/java/net/Socket/jdk13.java: new test

2003-01-30  C. Brian Jones <cbj@gnu.org>

	* gnu/testlet/java/net/Socket/SocketTest.java (test_params): 
	Change error message when failing getSoTimeout(), do not fail
	harness, just a test.

2003-01-29  C. Brian Jones <cbj@gnu.org>

	* gnu/testlet/java/net/Socket/SocketTest.java (test_params): 
	moved test of setSocketImplFactory to separate file since if 
	can affect subsequent attempts to create new Sockets
	(test_BasicServer): remove invalid test expecting an exception
	that should never be thrown and dependency on echo server
	* gnu/testlet/java/net/Socket/TestSocketImplFactory.java: new file
	* gnu/testlet/java/net/Socket/setSocketImplFactory.java: new test

2003-01-30  Stephen Crawley <crawley@dstc.edu.au>
	* gnu/testlet/java/beans/PropertyDescriptorTest.java: new tests

2003-01-29  Stephen Crawley <crawley@dstc.edu.au>	
	* gnu/testlet/java/beans/DescriptorTest.java: fixed test cases to
	work under JDK1.3/1.4

2003-01-28  Stephen Crawley <crawley@dstc.edu.au>
	* gnu/testlet/java/math/BigDecimal/DiagBigDecimal.java (diaghashcode): 
	Removed invalid tests for BigDecimal.hashCode()
	* gnu/testlet/java/math/BigDecimal/DiagBigDecimal.java (diaglongvalue):
	Corrected some tests that accidentally used BigDecimal(double)
	on (double)(Long.MAX_VALUE)
